--- a/package.json
+++ b/package.json
@@ -1,40 +1,1 @@
-{
-  "name": "school-management-system",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
-    "start": "next start",
-    "lint": "eslint",
-    "test": "playwright test",
-    "test:api": "playwright test tests/api.spec.ts",
-    "test:ui": "playwright test tests/showSchools.spec.ts"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
-    "@types/multer": "^2.0.0",
-    "@types/uuid": "^10.0.0",
-    "multer": "^2.0.2",
-    "mysql2": "^3.14.3",
-    "next": "15.5.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-hook-form": "^7.62.0",
-    "sharp": "^0.34.3",
-    "uuid": "^11.1.0",
-    "zod": "^4.1.5"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@playwright/test": "^1.55.0",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
-}
+{"type": "commonjs"}
